# aie5_midterm_1

./: README.md  app.py  pyproject.toml
.github/workflows/: main.yml
vector/: test_rag.ipynb  vector.py
