[project]
name = "aie5-midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "aiofiles>=23.2.1",
    "beautifulsoup4>=4.13.3",
    "chainlit>=2.2.1",
    "datasets>=3.3.2",
    "faiss-cpu>=1.10.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.37",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.6",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.6",
    "langdetect>=1.0.9",
    "langgraph>=0.2.74",
    "langsmith>=0.3.10",
    "lxml>=5.3.1",
    "nltk>=3.9.1",
    "pyarrow>=19.0.1",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.13.2",
    "sentence-transformers>=3.4.1",
    "tavily-python>=0.5.1",
    "tiktoken>=0.9.0",
    "transformers[torch]>=4.49.0",
    "wandb>=0.19.7",
    "websockets>=15.0",
    "xmltodict>=0.14.2",
]
